--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "three": "^0.119.1",
-    "three.interaction": "^0.2.3"
+    "three.interaction": "^0.2.3",
+    "webaudiofont": "^2.5.53"
   },
   "scripts": {
     "start": "react-app-rewired start",
